--- a/index.html
+++ b/index.html
@@ -57,12 +57,15 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <h2>O que é Linkin Park?</h2>
+                    <p class="p-2">Linkin Park é uma banda de rock dos Estados Unidos formada em Agoura Hills, Califórnia.
+                     A formação atual da banda inclui o vocalista e multi-instrumentista Mike Shinoda,
+                     o guitarrista Brad Delson, o baixista Dave Farrell, o DJ Joe Hahn, a vocalista Emily Armstrong e o baterista Colin Brittain.
+                     A formação do grupo em seus sete primeiros álbuns de estúdio incluía o vocalista Chester Bennington e o baterista Rob Bourdon;
+                     após o suicídio de Bennington em julho de 2017, a banda entrou em um hiato por tempo indeterminado.
+                     Em setembro de 2024, Linkin Park retornou as atividades com as adições de Armstrong e Brittain.
+                      O vocalista Mark Wakefield e o baixista Kyle Christner são ex-membros da banda.</p>
+                </p>
                 </div>
             </div>
         </section>
